# Embedded-Projects

./: README.md
blink_led_with_speed/: Cargo.toml  README.md
blink_led_with_speed/src/: main.rs
input_button/: Cargo.toml  README.md
input_button/src/: main.rs
led_state_machine/: Cargo.toml
led_state_machine/src/: README.md  interrupts.rs  led_state_machine.rs  main.rs  peripherals.rs
traffic_light/: Cargo.toml  README.md  memory.x
traffic_light/.cargo/: config.toml
traffic_light/src/: interrupts.rs  main.rs  peripherals.rs  traffic_light.rs
turn_on_led/: Cargo.toml  README.md
turn_on_led/src/: main.rs
