[package]
name = "input_button"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.1"
defmt-rtt = "1.3.0"
panic-probe = "1.0.0"
stm32f4xx-hal = { version = "0.23.0", features = ["stm32f407"] }